Added Controller with model binding form

--- a/CatBreedForm/Views/Shared/_Layout.cshtml
+++ b/CatBreedForm/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Cat" asp-action="Add">Add new cat</a>
                         </li>
+                        <li class"nav-item">
+                            <a class="nav-link text-dark" asp-controller="Cat" asp-action="AddWithBinding">Add new cat with binding</a>
+                        </li>
                     </ul>
                 </div>
             </div>
